Add environment at first save of campaignExecutionEngine (#1225)